Añadiendo estilos al blog de manera global

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+
 const pageTitle = "Mi blog de Astro aprendizaje"
 ---
 
@@ -16,7 +18,7 @@ const pageTitle = "Mi blog de Astro aprendizaje"
         <a href="/blog/">Blog</a>
       
         <h1>{ pageTitle }</h1>
-        
+
         <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
         <ul>
             <li><a href="/posts/post-1/">Publicación 1</a></li>
