--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+
 const pageTitle = "Sobre mi";
 
 const identity = {
@@ -16,6 +18,15 @@ const skills = [
   "Astro",
   "Redacción de documentos",
 ];
+
+
+const happy = true;
+const finished = false;
+const goal = 3;
+
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase"
 ---
 
 <html lang="en">
@@ -25,6 +36,18 @@ const skills = [
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
+    <style define:vars={{ skillColor, fontWeight, textCase }}>
+      h1 {
+        color: purple;
+        font-size: 4rem;
+      }
+
+      .skill {
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+      }
+    </style>    
   </head>
   <body>
     <a href="/">Inicio</a>
@@ -59,7 +82,13 @@ const skills = [
     </ul>
     <p>Mis habilidades son:</p>
     <ul>
-      {skills.map((skill) => <li>{skill}</li>)}
+      {skills.map((skill) => <li class="skill">{skill}</li>)}
     </ul>
+
+    { happy && <p>¡Estoy feliz de aprender Astro!</p> }
+
+    { finished && <p>¡He terminado este tutorial!</p> }
+
+    { goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p> }
   </body>
 </html>
