--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import '../styles/global.css';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 
 const pageTitle = "Página de inicio"
 ---
@@ -13,13 +15,11 @@ const pageTitle = "Página de inicio"
 		<title>{ pageTitle }</title>
 	</head>
 	<body>
-		<a href="/">Inicio</a>
-        <a href="/about/">Sobre mi</a>
-        <a href="/blog/">Blog</a>
-		
+
+		<Header />
+
 		<h1>{ pageTitle }</h1>
 
-
-      
+		<Footer />
 	</body>
 </html>
