Añade menu responsive e importa javascript del lado del cliente

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,5 +21,9 @@ const pageTitle = "Página de inicio"
 		<h1>{ pageTitle }</h1>
 
 		<Footer />
+		<script>
+			import "../scripts/menu.js"
+		</script>
+	  </body>
 	</body>
 </html>
